# Blogbench

./: AUTHORS  COPYING  ChangeLog  Makefile.am  NEWS  README  build.zig  configure.ac
man/: Makefile.am  blogbench.8
src/: Makefile.am  blogbench.c  blogbench.h  blogbench_p.h  bsd-getopt_long.c  bsd-getopt_long.h  commenter.c  fakesnprintf.c  globals.h  helpers.c  process.c  reader.c  rewriter.c  writer.c
